--- a/day3.html
+++ b/day3.html
@@ -48,8 +48,8 @@
                         <h2 class="mt-5">Text Underline:<span class="underline">Text Underline</span></h2>
                         <h2 class="mt-5">Text Line-Through:<span class="line-through">Text Line-Through</span></h2>
                     </div>
+                    <div class="mt-15"></div>
                 </div>
-                <div class="bg-beige mt-15"></div>
             </div>
         </div>
     </body>
