--- a/day6.html
+++ b/day6.html
@@ -22,12 +22,13 @@
         <div class="r-flex flex h-screen">
             <div class="w-64 bg-blue flex flex-col">
                 <div class="sidebar">
-                    <a class="button side-menu  tooltip  hover:bg-gray-700" href="index.html" title="Used Inline, Internal and External CSS">Day 1</a>
-                    <a class="button side-menu  tooltip  hover:bg-gray-700" href="day2.html" title="Created different Display, Positioning and floats">Day 2</a>
-                    <a class="button side-menu  tooltip  hover:bg-gray-700" href="day3.html" title="Imported font from Google fonts and used font styles">Day 3</a>
-                    <a class="button side-menu  tooltip  hover:bg-gray-700" href="day4.html">Day 4</a>
-                    <a class="button side-menu  tooltip  hover:bg-gray-700" href="day5.html">Day 5</a>
-                    <a class="button side-menu  tooltip active" href="day6.html">Day 6</a>
+                    <a class="button side-menu  tooltip hover:bg-gray-700" href="index.html" title="Used Inline, Internal and External CSS">Day 1</a>
+                    <a class="button side-menu  tooltip hover:bg-gray-700" href="day2.html" title="Created different Display, Positioning and floats">Day 2</a>
+                    <a class="button side-menu  tooltip hover:bg-gray-700" href="day3.html" title="Imported font from Google fonts and used font styles">Day 3</a>
+                    <a class="button side-menu  tooltip hover:bg-gray-700" href="day4.html" title="Used couple of selectors and an navigation menu">Day 4</a>
+                    <a class="button side-menu  tooltip hover:bg-gray-700" href="day5.html" title="Implemented Responsive navigation menu and used media quries">Day 5</a>
+                    <a class="button side-menu  tooltip active" href="day6.html" title="Created the Responsive Flexbox">Day 6</a>
+                    <a class="button side-menu  tooltip hover:bg-gray-700" href="day7.html" title="The full project is Responsive">Day 7</a>
                 </div>
             </div>
             <div class="flex-1 flex flex-col">
